Fixed menu elements not being reset after sign out
Fixed scrollbar width not calculating correctly when document is still
loading

--- a/src/WebComponents/Scroller/scroller.scss
+++ b/src/WebComponents/Scroller/scroller.scss
@@ -10,6 +10,8 @@
     > #wrapper {
         @include flex();
         overflow: scroll;
+        margin-right: -var(--theme-scrollbar-width);
+        margin-bottom: -var(--theme-scrollbar-width);
     }
 
     &[no-horizontal]:not([no-vertical]) {
